# PL-Reading-Group

./: README.md
effects/: README.md  dune-project
effects/lib/free/: dune  free.ml  free.mli  functor.ml  functor.mli  tseq.ml  tseq.mli
effects/lib/scoped/: dune  error.ml  sem.ml  sem.mli
effects/test/: dune  free.ml
effects_example/: GNUmakefile  dune  dune-project  effects_example.ml  effects_example.opam
effects_example/lib/: combining_effects.ml  combining_freemonad.ml  dune  lib.ml  opening_examples.ml  repl_effects.ml  repl_freemonad.ml  repl_modules.ml
effects_example/test/: dune
lens-examples/: CHANGELOG.md  LICENSE  README.md  lens-examples.cabal  package.yaml
lens-examples/app/: Main.hs
list-optimizations/: README.md  dune-project  list_optimizations.opam  test.txt
list-optimizations/lib/: adt.ml  church.ml  dune  hughes.ml  iter.ml  lazy.ml  list_intf.ml  list_optimizations.ml  queue.ml  queue.mli  rwr.ml  scott.ml
list-optimizations/test/: data.csv  data.xlsx  dune  example1.ml  example2.ml  example3.ml  list_benchmark.ml
ocaml_errors/: dune-project
ocaml_errors/lib/: cps_error.ml  cps_error.mli  dune
ocaml_errors/test/: dune
optics/: dune-project
optics/lib/: dune  profunctor.ml  reducer.ml
optics/test/: dune
predictable/clock/: packages.dhall  spago.dhall
predictable/modal/: packages.dhall  spago.dhall
singletons/sing/: CHANGELOG.md  package.yaml  sing.cabal  test.ml  test.v
singletons/sing-ocaml/: sing.ml
type-prog/: CHANGELOG.md  README.md  package.yaml  type-prog.cabal
type-prog/app/: Main.hs
(+31 files in other folders)
