(executable
 (public_name effects_example)
 (promote (until-clean))
 (name effects_example)
 (libraries lib))

(env
 (static (flags (:standard -ccopt -static)))
 (dev                                  ; turn off warnings!
  ; (flags (:standard -w +a-4-6-7-9-26-27-29-30-32..38-40..42-44-45-48-50-60-66))
  (flags (:standard -warn-error -a+31 -w +a-4-6-7-9-29-30-32..38-40..42-44-45-48-50-60-66-70))))
